[package]
name = "ddcleaner"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
humansize = "2"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
tokio-stream = { version = "0.1.18", features = ["time"] }

[profile.release]
opt-level = 3
lto = true
strip = true
