[package]
name = "ddcleaner"
version = "1.0.0"
edition = "2021"
description = "Blazing fast disk usage analyzer with web UI"
license = "MIT"
repository = "https://github.com/nkarasiak/ddcleaner"

[package.metadata.deb]
maintainer = "nkarasiak"
section = "utils"
priority = "optional"
assets = [
    ["target/release/ddcleaner", "usr/bin/", "755"],
]
extended-description = "Read-only disk usage analyzer with treemap visualization, folder explorer, and smart cleanup suggestions."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
humansize = "2"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
tokio-stream = { version = "0.1.18", features = ["time"] }
nix = { version = "0.29", features = ["fs"] }

[profile.release]
opt-level = 3
lto = true
strip = true
